# test_new_repo

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.md  test_pipeline.py
.github/workflows/: ci.yml
