[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[project]
name = "test-new-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "JordanCherry2000",email = "jordancherry00@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.9,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
